tried making intro responsive part 3

--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -24,7 +24,7 @@
         <img src="../../assets/intro-icon-github.png" alt="">
         <img src="../../assets/intro-icon-email.png" alt="">
         <img src="../../assets/intro-icon-linkedin.png" alt="">
-        <span><a href="mailto:gloria.schaffarczyk@gmail.com">gloria.schaffarczyk&#64;gmail.com</a></span>
+        <span class="mailto-long"><a href="mailto:gloria.schaffarczyk@gmail.com">gloria.schaffarczyk&#64;gmail.com</a></span>
     </div>
 </div>
 <div class="scroll-indicator">
