made intro responsive part 3

--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -211,9 +211,9 @@ button {
     bottom: 130px;
   }
 
-  .social-media-and-contact {
-    bottom: 130px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 130px;
+  // }
 }
 
 @media (max-width: 1420px) {
@@ -221,9 +221,9 @@ button {
     bottom: 170px;
   }
 
-  .social-media-and-contact {
-    bottom: 170px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 170px;
+  // }
 }
 
 @media (max-width: 1350px) {
@@ -231,9 +231,9 @@ button {
     bottom: 200px;
   }
 
-  .social-media-and-contact {
-    bottom: 200px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 200px;
+  // }
 }
 
 @media (max-width: 1200px) {
@@ -274,9 +274,9 @@ button {
     top: -595px;
   }
 
-  .social-media-and-contact {
-    bottom: -160px;
-  }
+  // .social-media-and-contact {
+  //   bottom: -160px;
+  // }
 
   .scroll-indicator {
     bottom: -160px;
@@ -322,9 +322,9 @@ button {
     top: -470px; /* Fester Pixelwert */
   }
 
-  .social-media-and-contact {
-    bottom: -130px;
-  }
+  // .social-media-and-contact {
+  //   bottom: -130px;
+  // }
 }
 
 @media (max-width: 768px) {
@@ -348,9 +348,9 @@ button {
     display: none;
   }
 
-  .social-media-and-contact {
-    bottom: -110px;
-  }
+  // .social-media-and-contact {
+  //   bottom: -110px;
+  // }
 }
 
 @media (max-width: 710px) {
@@ -358,9 +358,9 @@ button {
     top: -410px; /* Fester Pixelwert */
   }
 
-  .social-media-and-contact {
-    bottom: -50px;
-  }
+  // .social-media-and-contact {
+  //   bottom: -50px;
+  // }
 }
 
 @media (max-width: 660px) {
@@ -368,9 +368,9 @@ button {
     top: -380px; /* Fester Pixelwert */
   }
 
-  .social-media-and-contact {
-    bottom: 0px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 0px;
+  // }
 }
 
 @media (max-width: 610px) {
@@ -378,9 +378,9 @@ button {
     top: -355px; /* Fester Pixelwert */
   }
 
-  .social-media-and-contact {
-    bottom: 70px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 70px;
+  // }
 }
 
 @media (max-width: 560px) {
@@ -401,15 +401,15 @@ button {
     transform: translateX(-4%) translateY(9%);
   }
 
-  .social-media-and-contact {
-    bottom: 60px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 60px;
+  // }
 }
 
 @media (max-width: 520px) {
-  .social-media-and-contact {
-    bottom: 110px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 110px;
+  // }
 }
 
 @media (max-width: 500px) {
@@ -417,9 +417,9 @@ button {
     top: -320px; /* Fester Pixelwert */
   }
 
-  .social-media-and-contact {
-    bottom: 160px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 160px;
+  // }
 }
 
 @media (max-width: 460px) {
@@ -427,9 +427,9 @@ button {
     top: -290px; /* Fester Pixelwert */
   }
 
-  .social-media-and-contact {
-    bottom: 200px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 200px;
+  // }
 }
 
 @media (max-width: 400px) {
@@ -437,9 +437,9 @@ button {
     top: -270px; /* Fester Pixelwert */
   }
 
-  .social-media-and-contact {
-    bottom: 300px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 300px;
+  // }
 
   .intro-line {
     width: 68px;
@@ -467,9 +467,9 @@ button {
     padding: 0 0 0 0px;
   }
 
-  .social-media-and-contact {
-    bottom: 300px;
-  }
+  // .social-media-and-contact {
+  //   bottom: 300px;
+  // }
 
   .intro-line {
     width: 39px;
