--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -13,7 +13,7 @@
   align-items: center;
   justify-items: stretch;
   position: relative;
-  border: 1px solid white;
+  // border: 1px solid white;
 }
 
 .intro-element1 {
@@ -26,7 +26,7 @@
   z-index: 3;
   padding: 0 100px;
   box-sizing: border-box;
-  border: 1px solid white;
+  // border: 1px solid white;
 }
 
 .intro-element1 svg {
@@ -47,7 +47,7 @@
   left: 50%;
   transform: translateX(-50%);
   overflow: visible;
-  border: 1px solid #fff700;
+  // border: 1px solid #fff700;
 }
 
 .intro-element2 img {
@@ -65,7 +65,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #ffa600;
+  // border: 1px solid #ffa600;
 }
 
 .intro-element3 img {
@@ -83,7 +83,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid #ff0000;
+  // border: 1px solid #ff0000;
   transform: translateX(-8%) translateY(14%);
 }
 
@@ -104,10 +104,10 @@
   z-index: 4;
   display: flex;
   flex-direction: row;
-  align-items: center; 
+  align-items: center;
   justify-content: flex-start;
   gap: 20px;
-  border: 1px solid #ff00a2;
+  // border: 1px solid #ff00a2;
   margin-top: -120px;
 }
 
@@ -119,7 +119,7 @@
   justify-content: center;
   gap: 40px;
   padding-left: 200px;
-  border: 1px solid #a200ff;
+  // border: 1px solid #a200ff;
 }
 
 .intro-contact-symbols a {
@@ -130,8 +130,8 @@
 .intro-line {
   position: absolute;
   left: 0;
-  top: 50%; 
-  transform: translateY(-50%); 
+  top: 50%;
+  transform: translateY(-50%);
   border: 0;
   border-top: 4px solid #ff3f79;
   border-top-right-radius: 20px;
@@ -163,7 +163,7 @@ button {
   right: 100px;
   z-index: 4;
   animation: jump 2s ease infinite;
-  border: 1px solid #3c00ff;
+  // border: 1px solid #3c00ff;
 }
 
 .scroll-indicator span {
@@ -210,7 +210,7 @@ button {
 
 @media (max-width: 1700px) {
   .intro-element2 {
-    top: -460px; 
+    top: -460px;
   }
 }
 
@@ -222,7 +222,7 @@ button {
 
 @media (max-width: 1500px) {
   .intro-element2 {
-    top: -444px; 
+    top: -444px;
   }
 
   .scroll-indicator {
@@ -252,7 +252,6 @@ button {
   .social-media-and-contact {
     margin-top: -220px;
   }
-
 }
 
 @media (max-width: 1200px) {
@@ -298,31 +297,31 @@ button {
   }
 
   .scroll-indicator {
-    bottom: -160px;
+    bottom: -230px;
   }
 }
 
 @media (max-width: 1100px) {
   .intro-element2 {
-    top: -570px; 
+    top: -570px;
   }
 }
 
 @media (max-width: 1000px) {
   .intro-element2 {
-    top: -550px; 
+    top: -550px;
   }
 }
 
 @media (max-width: 940px) {
   .intro-element2 {
-    top: -530px; 
+    top: -530px;
   }
 }
 
 @media (max-width: 890px) {
   .intro-element2 {
-    top: -515px; 
+    top: -515px;
   }
 
   .scroll-indicator {
@@ -332,13 +331,13 @@ button {
 
 @media (max-width: 840px) {
   .intro-element2 {
-    top: -485px; 
+    top: -485px;
   }
 }
 
 @media (max-width: 790px) {
   .intro-element2 {
-    top: -470px; 
+    top: -470px;
   }
 }
 
@@ -366,13 +365,13 @@ button {
 
 @media (max-width: 710px) {
   .intro-element2 {
-    top: -410px; 
+    top: -410px;
   }
 }
 
 @media (max-width: 660px) {
   .intro-element2 {
-    top: -380px; 
+    top: -380px;
   }
 }
 
@@ -403,27 +402,39 @@ button {
 
 @media (max-width: 500px) {
   .intro-element2 {
-    top: -320px; 
+    top: -320px;
   }
 }
 
 @media (max-width: 460px) {
+.intro-contact-symbols {
+  width: 100%;
+  padding: 0 25px 0 25px;
+  justify-content: space-evenly;
+  gap: 15px;
+}
+
   .intro-element2 {
     top: -290px;
+  }
+
+  .intro-line {
+    display: none;
+    visibility: hidden;
   }
 }
 
 @media (max-width: 400px) {
+  .intro-contact-symbols {
+    gap: 10px;
+  }
+
   .intro-element2 {
-    top: -270px; 
+    top: -270px;
   }
 
   .intro-line {
     width: 68px;
-  }
-
-  .intro-contact-symbols {
-    padding-left: 91px;
   }
 }
 
@@ -449,7 +460,7 @@ button {
   }
 
   .intro-contact-symbols {
-    padding-left: 54px;
+    gap: 5px;
   }
 }
 
